Adapt agenda to new topic

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Datenmodellierung: ERD vs. UML</title>
+    <title>
+        Gegenüberstellung verschiedener Datenmodellierungsmethoden:
+        Konzeptuelle Modellierung vs. Entity-Relationship-Diagramme
+    </title>
 
     <meta name="description"
-          content="Entity-Relationship-Diagramme und UML als Ansätze zur konzeptuellen Datenmodellierung">
+          content="Gegenüberstellung des theoretischen Anspruchs der konzeptuellen Modellierung gemäß dem Dreiphasenmodell und der praktischen Umsetzung durch verschiedene Entity-Relationship-Ansätze">
     <meta name="author" content="Christoph Gietl">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,22 +32,26 @@
 
         <section>
             <section>
-                <h1 style="text-align: left">Datenmodellierung: ERD vs. UML</h1>
+                <h1 style="font-size: 2.5em; text-align: left">
+                    Konzeptuelle Modellierung
+                    <em style="color: #ff2c2d; font-style: normal">vs.</em>
+                    Entity-Relationship-Diagramme
+                </h1>
                 <table style="font-size: 0.5em; margin-left: 0; margin-top: 2em; text-align: left">
                     <tr>
-                        <th style="border-style: none">Modul</th>
+                        <th style="border-style: none; padding-left: 0">Modul</th>
                         <td style="border-style: none">Datenbanken</td>
                     </tr>
                     <tr>
-                        <th style="border-style: none">Dozent</th>
+                        <th style="border-style: none; padding-left: 0">Dozent</th>
                         <td style="border-style: none">Christoph Gietl</td>
                     </tr>
                     <tr>
-                        <th style="border-style: none">Datum</th>
+                        <th style="border-style: none; padding-left: 0">Datum</th>
                         <td style="border-style: none">26. Januar 2022</td>
                     </tr>
                     <tr>
-                        <th style="border-style: none">Folien</th>
+                        <th style="border-style: none; padding-left: 0">Folien</th>
                         <td style="border-style: none">
                             <a href="https://christophgietl.github.io/datenmodellierung">christophgietl.github.io/datenmodellierung</a>
                         </td>
@@ -58,7 +65,6 @@
                             <ol>
                                 <li>Name: Datenbanken</li>
                                 <li>Zielgruppe: 3. bis 4. Semester im B.&thinsp;Sc.-Studiengang <em>Informatik</em></li>
-                                <li>Vorkenntnisse: objektorientierte Programmierung und UML</li>
                             </ol>
                         </li>
                         <li>Überleitung
@@ -73,14 +79,7 @@
             </section>
         </section>
 
-        <section data-markdown="rueckblick.md"
-                 data-separator="----"
-                 data-separator-vertical="---"
-                 data-separator-notes="^Note:"
-                 data-charset="utf-8">
-        </section>
-
-        <section data-markdown="unified-modeling-language.md"
+        <section data-markdown="konzeptuelle-modellierung.md"
                  data-separator="----"
                  data-separator-vertical="---"
                  data-separator-notes="^Note:"
