Adapt agenda to new topic (again)

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
 
     <title>
-        Gegenüberstellung verschiedener Datenmodellierungsmethoden:
-        Konzeptuelle Modellierung vs. Entity-Relationship-Diagramme
+        Konzeptueller Datenbankentwurf:
+        Semantisches Modell der Informationsanalyse vs. Entity-Relationship-Modell
     </title>
 
     <meta name="description"
-          content="Gegenüberstellung des theoretischen Anspruchs der konzeptuellen Modellierung gemäß dem Dreiphasenmodell und der praktischen Umsetzung durch verschiedene Entity-Relationship-Ansätze">
+          content="Gegenüberstellung verschiedener Modelle des konzeptuellen Datenbankentwurfs">
     <meta name="author" content="Christoph Gietl">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -32,10 +32,11 @@
 
         <section>
             <section>
-                <h1 style="font-size: 2.5em; text-align: left">
-                    Konzeptuelle Modellierung
-                    <em style="color: #ff2c2d; font-style: normal">vs.</em>
-                    Entity-Relationship-Diagramme
+                <h1 style="font-size: 2.2em; text-align: left">
+                    Konzeptueller Datenbankentwurf:<br/>
+                    <em style="color: #ff2c2d; font-style: normal">Semantisches Modell der Informationsanalyse</em>
+                    vs.<br/>
+                    <em style="color: #ff2c2d; font-style: normal">Entity-Relationship-Modell</em>
                 </h1>
                 <table style="font-size: 0.5em; margin-left: 0; margin-top: 2em; text-align: left">
                     <tr>
@@ -86,21 +87,28 @@
                  data-charset="utf-8">
         </section>
 
-        <section data-markdown="konzeptuelle-modellierung.md"
+        <section data-markdown="konzeptueller-datenbankentwurf.md"
                  data-separator="----"
                  data-separator-vertical="---"
                  data-separator-notes="^Anmerkungen:"
                  data-charset="utf-8">
         </section>
 
-        <section data-markdown="entity-relationship-diagramme.md"
+        <section data-markdown="semantisches-modell.md"
                  data-separator="----"
                  data-separator-vertical="---"
                  data-separator-notes="^Anmerkungen:"
                  data-charset="utf-8">
         </section>
 
-        <section data-markdown="zusammenfassung-und-ausblick.md"
+        <section data-markdown="entity-relationship-modell.md"
+                 data-separator="----"
+                 data-separator-vertical="---"
+                 data-separator-notes="^Anmerkungen:"
+                 data-charset="utf-8">
+        </section>
+
+        <section data-markdown="zusammenfassung-und-literatur.md"
                  data-separator="----"
                  data-separator-vertical="---"
                  data-separator-notes="^Anmerkungen:"
