Add content to conceptual database design section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>
         Konzeptueller Datenbankentwurf:
-        Semantisches Modell der Informationsanalyse vs. Entity-Relationship-Modell
+        Semantisches Datenmodell der Informationsanalyse vs. Entity-Relationship-Modell
     </title>
 
     <meta name="description"
@@ -34,7 +34,7 @@
             <section>
                 <h1 style="font-size: 2.2em; text-align: left">
                     Konzeptueller Datenbankentwurf:<br/>
-                    <em style="color: #ff2c2d; font-style: normal">Semantisches Modell der Informationsanalyse</em>
+                    <em style="color: #ff2c2d; font-style: normal">Semantisches Datenmodell der Informationsanalyse</em>
                     vs.<br/>
                     <em style="color: #ff2c2d; font-style: normal">Entity-Relationship-Modell</em>
                 </h1>
@@ -94,7 +94,7 @@
                  data-charset="utf-8">
         </section>
 
-        <section data-markdown="semantisches-modell.md"
+        <section data-markdown="semantisches-datenmodell.md"
                  data-separator="----"
                  data-separator-vertical="---"
                  data-separator-notes="^Anmerkungen:"
