Rename conceptual database design section to conceptual models section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <title>
-        Konzeptueller Datenbankentwurf:
+        Konzeptuelle Datenmodelle:
         Semantisches Datenmodell der Informationsanalyse vs. Entity-Relationship-Modell
     </title>
 
@@ -32,8 +32,8 @@
 
         <section>
             <section>
-                <h1 style="font-size: 2.2em; text-align: left">
-                    Konzeptueller Datenbankentwurf:<br/>
+                <h1 style="font-size: 2.5em; text-align: left">
+                    Konzeptuelle Datenmodelle:<br/>
                     <em style="color: #ff2c2d; font-style: normal">Semantisches Datenmodell der Informationsanalyse</em>
                     vs.<br/>
                     <em style="color: #ff2c2d; font-style: normal">Entity-Relationship-Modell</em>
@@ -87,14 +87,14 @@
                  data-charset="utf-8">
         </section>
 
-        <section data-markdown="konzeptueller-datenbankentwurf.md"
+        <section data-markdown="konzeptuelle-datenmodelle.md"
                  data-separator="----"
                  data-separator-vertical="---"
                  data-separator-notes="^Anmerkungen:"
                  data-charset="utf-8">
         </section>
 
-        <section data-markdown="semantisches-datenmodell.md"
+        <section data-markdown="semantisches-datenmodell-der-informationsanalyse.md"
                  data-separator="----"
                  data-separator-vertical="---"
                  data-separator-notes="^Anmerkungen:"
