Add notes to section on conceptual data models

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                                         der ersten Wochen des Semesters.</q>
                                 </li>
                                 <li>
+                                    <q>Außerdem setze ich Kenntnisse in OOP voraus.</q>
+                                </li>
+                                <li>
                                     <q>Bitte sehen Sie mir nach, dass ich aufgrund der Kürze der Zeit und des speziellen
                                         Settings etwas schneller sprechen werde, als ich das sonst vor Studierenden
                                         tun würde.</q>
