Add note to title slide

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <aside class="notes">
                     <h3>Begrüßung und Motivation</h3>
                     <ol>
+                        <li>Poste link zu den Folien im Chat.</li>
                         <li>Begrüßung der Zuhörer:innen
                             <ol>
                                 <li>
